add disccount for order now ok